# yandere-api-v2-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  yandere-api-v2.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  features.lua  yandere-api-v2.rockspec  yandere-api-v2_sdk.lua  yandere-api-v2_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  yandereapiv2_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  yandereapiv2_sdk.py  yandereapiv2_types.py
py/core/: context.py  control.py  operation.py  response.py  spec.py
py/entity/: post_entity.py
py/feature/: base_feature.py  cache_feature.py  debug_feature.py  paging_feature.py  ratelimit_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_post_direct.py  test_post_entity.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_url.py  param.py  prepare_auth.py  prepare_params.py  register.py  result_body.py  result_headers.py  transform_request.py
rb/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  YandereApiV2_sdk.gemspec  YandereApiV2_sdk.rb  (+3 more)
(+406 files in other folders)
